@@ -4,7 +4,6 @@ import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -516,6 +515,6 @@ public class PersonaDetalleService {
                 tipo.name(),
                 tipo.getTipoNotificacion() 
         ))
-        .collect(Collectors.toList());
+        .toList();
     }
 }
